feat(chat): 비즈니스 로직 개선
Service에서 title 처리 로직이 비효율적 (null 체크 후 재설정)

매핑 메서드에서 title 필드 누락

권한 예외가 도메인 예외 대신 RuntimeException 사용

테스트에서 사용하지 않는 newPost 객체 생성

ID 필드 불일치 (postId vs id)