@@ -1,15 +1,16 @@
-// service/impl/PostServiceImpl.java
 package com.example.backend.service.impl;
 
 import static com.example.backend.common.constant.PostConstants.Visibility.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.example.backend.common.error.BadRequestException;
+import com.example.backend.common.error.ForbiddenException;
+import com.example.backend.common.error.NotFoundException;
 import com.example.backend.dto.post.CreateRequest;
 import com.example.backend.dto.post.Detail;
 import com.example.backend.dto.post.Summary;
@@ -34,18 +35,33 @@ public class PostServiceImpl implements PostService {
     @Override
     @Transactional
     public Detail createPost(CreateRequest request, String userEmail) {
-        UserEntity user = userRepository.findByEmail(userEmail)
-                .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다."));
-        PostEntity post = createPostEntity(request, userEmail, user.getNickname());
-        // 타이틀이 없으면 제목없음 넣음 
-        if (post.getTitle() == null || post.getTitle().isBlank()) {
-            post.setTitle("제목 없음");
-        } else {
-            post.setTitle(post.getTitle());
-        }
-        PostEntity savedPost = postRepository.save(post);
-        log.info("새 게시글 작성 완료 - ID: {}, 작성자: {}", savedPost.getPostId(), userEmail);
+        log.debug("[Post#create] request: {}, userEmail: {}", request, userEmail);
 
+        if (request == null || request.getContent() == null || request.getContent().isBlank()) {
+            throw new BadRequestException("게시글 내용은 필수입니다.", "MISSING_CONTENT", "content");
+        }
+
+        UserEntity user = userRepository.findByEmail(userEmail)
+            .orElseThrow(() -> new NotFoundException("사용자를 찾을 수 없습니다.", "USER_NOT_FOUND", "userEmail"));
+
+        PostEntity post = PostEntity.builder()
+            .title(normalizeTitle(request.getTitle()))
+            .content(request.getContent().trim())
+            .userEmail(user.getEmail())
+            .userNickname(user.getNickname())
+            .visibility(request.getVisibility() != null ? request.getVisibility() : PUBLIC)
+            .status("active")
+            .likeCount(0)
+            .commentCount(0)
+            .viewCount(0)
+            .build();
+
+        log.debug("[Post#create] entity before save: {}", post);
+
+        PostEntity savedPost = postRepository.save(post);
+
+        log.info("새 게시글 작성 완료 - ID: {}, 작성자: {}, 제목: {}",
+            savedPost.getPostId(), userEmail, savedPost.getTitle());
 
         return mapToDetail(savedPost);
     }
@@ -53,22 +69,39 @@ public class PostServiceImpl implements PostService {
     @Override
     @Transactional
     public Detail updatePost(Long postId, UpdateRequest request, String userEmail) {
+        log.debug("[Post#update] postId: {}, request: {}, userEmail: {}", postId, request, userEmail);
+
+        if (postId == null || postId <= 0) {
+            throw new BadRequestException("유효하지 않은 게시글 ID입니다.", "INVALID_POST_ID", "postId");
+        }
+
         PostEntity post = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("게시글을 찾을 수 없습니다."));
+            .orElseThrow(() -> new NotFoundException("게시글을 찾을 수 없습니다.", "POST_NOT_FOUND", "postId"));
+
         validateUserPermission(post, userEmail, "수정");
         updatePostFields(post, request);
+
         PostEntity updatedPost = postRepository.save(post);
         log.info("게시글 수정 완료 - ID: {}, 수정자: {}", postId, userEmail);
+
         return mapToDetail(updatedPost);
     }
 
     @Override
     @Transactional
     public void deletePost(Long postId, String userEmail) {
+        log.debug("[Post#delete] postId: {}, userEmail: {}", postId, userEmail);
+
+        if (postId == null || postId <= 0) {
+            throw new BadRequestException("유효하지 않은 게시글 ID입니다.", "INVALID_POST_ID", "postId");
+        }
+
         PostEntity post = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("게시글을 찾을 수 없습니다."));
+            .orElseThrow(() -> new NotFoundException("게시글을 찾을 수 없습니다.", "POST_NOT_FOUND", "postId"));
+
         validateUserPermission(post, userEmail, "삭제");
         postRepository.deleteById(postId);
+
         log.info("게시글 삭제 완료 - ID: {}, 삭제자: {}", postId, userEmail);
     }
 
@@ -76,55 +109,87 @@ public class PostServiceImpl implements PostService {
     @Transactional(readOnly = true)
     public List<Detail> getAllPosts() {
         List<PostEntity> posts = postRepository.findAllByOrderByCreatedAtDesc();
-        return posts.stream().map(this::mapToDetail).collect(Collectors.toList());
+        log.debug("[Post#list] found {} posts", posts.size());
+
+        return posts.stream().map(this::mapToDetail).toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<Summary> getPublicPosts() {
         List<PostEntity> posts = postRepository.findByVisibilityOrderByCreatedAtDesc(PUBLIC);
-        return posts.stream().map(this::mapToSummary).collect(Collectors.toList());
+        log.debug("[Post#publicList] found {} public posts", posts.size());
+
+        return posts.stream().map(this::mapToSummary).toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<Detail> getPostsByUser(String userEmail) {
+        if (userEmail == null || userEmail.isBlank()) {
+            throw new BadRequestException("사용자 이메일은 필수입니다.", "MISSING_USER_EMAIL", "userEmail");
+        }
+
         List<PostEntity> posts = postRepository.findByUserEmailOrderByCreatedAtDesc(userEmail);
-        return posts.stream().map(this::mapToDetail).collect(Collectors.toList());
+        log.debug("[Post#userList] userEmail: {}, found {} posts", userEmail, posts.size());
+
+        return posts.stream().map(this::mapToDetail).toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public Optional<Detail> getPostDetail(Long postId) {
-        return postRepository.findById(postId).map(this::mapToDetail);
+        if (postId == null || postId <= 0) {
+            return Optional.empty();
+        }
+
+        Optional<Detail> result = postRepository.findById(postId).map(this::mapToDetail);
+        log.debug("[Post#detail] postId: {}, found: {}", postId, result.isPresent());
+
+        return result;
     }
 
     @Override
     @Transactional(readOnly = true)
     public long getPostCountByVisibility(String userEmail, String visibility) {
+        if (userEmail == null || userEmail.isBlank()) {
+            throw new BadRequestException("사용자 이메일은 필수입니다.", "MISSING_USER_EMAIL", "userEmail");
+        }
+
         return postRepository.countByUserEmailAndVisibility(userEmail, visibility);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<Summary> getRecentPosts(int limit) {
+        if (limit <= 0 || limit > 100) {
+            throw new BadRequestException("조회 개수는 1~100 사이여야 합니다.", "INVALID_LIMIT", "limit");
+        }
+
         List<PostEntity> posts = postRepository.findTopNByOrderByCreatedAtDesc(limit);
-        return posts.stream().map(this::mapToSummary).collect(Collectors.toList());
+        log.debug("[Post#recent] limit: {}, found: {}", limit, posts.size());
+
+        return posts.stream().map(this::mapToSummary).toList();
     }
 
     // ====== private helpers ======
-    private PostEntity createPostEntity(CreateRequest request, String userEmail, String userNickname) {
-        PostEntity post = new PostEntity();
-        post.setContent(request.getContent());
-        post.setVisibility(request.getVisibility());
-        post.setUserEmail(userEmail);
-        post.setUserNickname(userNickname);
-        return post;
+
+    private String normalizeTitle(String title) {
+        if (title == null || title.isBlank()) {
+            return "제목 없음";
+        }
+        return title.trim();
     }
 
     private void updatePostFields(PostEntity post, UpdateRequest request) {
+        if (request.getTitle() != null) {
+            post.setTitle(normalizeTitle(request.getTitle()));
+        }
         if (request.getContent() != null) {
-            post.setContent(request.getContent());
+            if (request.getContent().isBlank()) {
+                throw new BadRequestException("게시글 내용은 비워둘 수 없습니다.", "EMPTY_CONTENT", "content");
+            }
+            post.setContent(request.getContent().trim());
         }
         if (request.getVisibility() != null) {
             post.setVisibility(request.getVisibility());
@@ -133,23 +198,24 @@ public class PostServiceImpl implements PostService {
 
     private void validateUserPermission(PostEntity post, String userEmail, String action) {
         if (!post.getUserEmail().equals(userEmail)) {
-            throw new RuntimeException("게시글 " + action + " 권한이 없습니다.");
+            throw new ForbiddenException("게시글 " + action + " 권한이 없습니다.", "FORBIDDEN_POST_" + action.toUpperCase());
         }
     }
 
     private Detail mapToDetail(PostEntity post) {
         Detail detail = new Detail();
         detail.setId(post.getPostId());
+        detail.setTitle(post.getTitle()); // ✅ title 매핑 추가
         detail.setContent(post.getContent());
         detail.setUserEmail(post.getUserEmail());
         detail.setUserNickname(post.getUserNickname());
         detail.setVisibility(post.getVisibility());
         detail.setCreatedAt(post.getCreatedAt());
         detail.setUpdatedAt(post.getUpdatedAt());
-        // TODO: 좋아요/댓글 집계 연동
-        detail.setLikeCount(0);
-        detail.setCommentCount(0);
-        detail.setLikedByCurrentUser(false);
+        detail.setLikeCount(post.getLikeCount() != null ? post.getLikeCount() : 0);
+        detail.setCommentCount(post.getCommentCount() != null ? post.getCommentCount() : 0);
+        detail.setLikedByCurrentUser(false); // TODO: 실제 좋아요 상태 확인
+
         return detail;
     }
 
@@ -160,9 +226,9 @@ public class PostServiceImpl implements PostService {
         summary.setUserNickname(post.getUserNickname());
         summary.setVisibility(post.getVisibility());
         summary.setCreatedAt(post.getCreatedAt());
-        // TODO: 좋아요/댓글 집계 연동
-        summary.setLikeCount(0);
-        summary.setCommentCount(0);
+        summary.setLikeCount(post.getLikeCount() != null ? post.getLikeCount() : 0);
+        summary.setCommentCount(post.getCommentCount() != null ? post.getCommentCount() : 0);
+
         return summary;
     }
 
